--- a/ui/dcs/app/analyse/js-view.htm
+++ b/ui/dcs/app/analyse/js-view.htm
@@ -1,3 +1,3 @@
-<a href="{{config.nifiUrl}}" target="_NiFi Flow">
+<a href="{{nifiUrl}}" target="_NiFi Flow">
  <img src="analyse/nifi.png" alt="Analyse JS Test View"  style="width:100%;height:100%;border:0">
 </a>
