--- a/test/tests.html
+++ b/test/tests.html
@@ -10,15 +10,14 @@
         <script src="../node_modules/systemjs/dist/system.src.js"></script>
         <script>
             // #2. Configure systemjs to use the .js extension
-            //     for imports from the app folder
             System.config({
                 packages: {
-                    'dist/app': {defaultExtension: 'js'}
+                    '../target/web/typescript/main/javascripts': {defaultExtension: 'js'}
                 }
             });
 
             // #3. Import the spec file explicitly
-            System.import('dist/test/assets/javascripts/analyse/flow.template.spec.js')
+            System.import('../target/web/typescript/main/javascripts/analyse/flow.template.spec.js')
 
             // #4. wait for all imports to load ...
             //     then re-execute `window.onload` which
