--- a/test/tests.html
+++ b/test/tests.html
@@ -8,6 +8,7 @@
 
     <body>
         <script src="../node_modules/systemjs/dist/system.src.js"></script>
+        <script src="./test.systemjs.config.js"></script>
         <script>
             // #2. Configure systemjs to use the .js extension
             System.config({
@@ -18,7 +19,7 @@
 
             // #3. Import the spec file explicitly
             System.import('../target/web/typescript/main/javascripts/analyse/flow.template.spec.js')
-
+            System.import('../target/web/typescript/main/javascripts/analyse/shared/flow.service.spec.js')
             // #4. wait for all imports to load ...
             //     then re-execute `window.onload` which
             //     triggers the Jasmine test-runner start
